# apple-health-exporter

./: .gitignore  LICENSE  README.md  environment.yml  export.py  pyproject.toml  requirements.txt  setup.py
apple_health_exporter/: __init__.py  __main__.py  export.py
applehealthexporter/apple_health_exporter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
